--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 <body>
     <section class="hero">
         <nav class="header"> 
-            <div>Header Logo</div>
-            <ul> 
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+            <div class="logo">Header Logo</div>
+            <ul class="right-links"> 
+                <li> <a href=""> header link one </a></li>
+                <li> <a href=""> header link two </a></li>
+                <li> <a href=""> header link three </a></li>
             </ul>
         </nav>
 
         <div class="container">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
-            <img src="" alt="This is placeholder for an image">
+            <div class="sign">
+                <h1 class="main">This website is awesome</h1>
+                <div class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button>Sign up</button>
+            </div>
+            <div class="image">This is a placeholder for an image</div>
         </div>
     </section>
 
