--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
     </section>
 
     <section class="info">
-        <h2>Some random information.</h2>
+        <h2 class="heading">Some random information.</h2>
         <div class="container">
-            <div class="images">
-                <img src="" alt="image">
+            <div class="image-text">
+                <div class="image"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div class="images">
-                <img src="" alt="image">
+            <div class="image-text">
+                <div class="image"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div class="images">
-                <img src="" alt="image">
+            <div class="image-text">
+                <div class="image"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div class="images">
-                <img src="" alt="image">
+            <div class="image-text">
+                <div class="image"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
