--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
     </section>
 
     <section class="quotes">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows?
-            All I know is that it looks nice.
-        </p>
-        <p>-Thor, God of Thunder</p>
+        <div class="main">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows?
+        All I know is that it looks nice.
+        <div class="person">-Thor, God of Thunder</div>
+        </div>
     </section>
 
     <div class="call-to-action">
