Add sign up section and footer
Added html and css for the sign up section and the footer

--- a/index.html
+++ b/index.html
@@ -58,10 +58,16 @@
         </div>
     </section>
 
-    <div class="call-to-action">
-        
-    </div>
+    <section class="call-to-action">
+        <div class="container">
+            <div class="text">
+                <p class="main">Call to action! It's time!</p>
+                <p class="secondary">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </section>
 
-    <footer>Copyright c The Odin Project 2021</footer>
+    <footer>Copyright © The Odin Project 2022</footer>
 </body> 
 </html>
